# Ignisia-MIT

./: .gitignore  README.md  chunker.py  compare.md  embedder.py  main.py  parser.py  pyproject.toml  rag.py  test_chunker.py  test_save_email_output.py  test_save_image_output.py  test_save_pdf_output.py
backend/: app.py  auth.py  database.py
data/: sample-email-chunks.json  sample-email.md  sample-ocr-image-chunks.json  sample-ocr-image.md  sample-report-chunks.json  sample-report.md
examples/: sample-email.eml
frontend/: app.js  app.ts  index.html  styles.css  tsconfig.json
pages/: crm_support_ticket_agent.html  customer.html  employee.html
test_cases/: pipeline.py
tests/manual_outputs/: test_save_email_output.py  test_save_image_output.py  test_save_pdf_output.py
tests/unit/: test_chunker.py  test_embedder.py
