[project]
name = "ignisia-mit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "langchain-text-splitters>=0.3.11",
    "liteparse>=1.2.1",
    "openpyxl>=3.1.5",
    "tiktoken>=0.11.0",
]
