[project]
name = "ignisia-mit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "chromadb>=1.0.20",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "groq",
    "langchain-text-splitters>=0.3.11",
    "liteparse>=1.2.1",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.11.0",
]
